// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`loadSiteConfig > website with .cjs siteConfig 1`] = `
{
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_router": "browser",
      "v4": {
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
        "onUnusedMarkdownDirectives": "warn",
      },
      "mdx1Compat": {
        "admonitions": false,
        "comments": false,
        "headingIds": false,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "storage": {
      "namespace": true,
      "type": "localStorage",
    },
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "title",
    "titleDelimiter": "|",
    "url": "https://example.com",
    "vcs": {
      "getFileCreationInfo": [Function],
      "getFileLastUpdateInfo": [Function],
      "initialize": [Function],
    },
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/config/docusaurus.config.cjs",
}
`;

exports[`loadSiteConfig > website with ts + js config 1`] = `
{
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_router": "browser",
      "v4": {
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
        "onUnusedMarkdownDirectives": "warn",
      },
      "mdx1Compat": {
        "admonitions": false,
        "comments": false,
        "headingIds": false,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "storage": {
      "namespace": true,
      "type": "localStorage",
    },
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "TS title",
    "titleDelimiter": "|",
    "url": "https://example.com",
    "vcs": {
      "getFileCreationInfo": [Function],
      "getFileLastUpdateInfo": [Function],
      "initialize": [Function],
    },
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/config/sites/ts-and-js-site/docusaurus.config.ts",
}
`;

exports[`loadSiteConfig > website with valid JS CJS config 1`] = `
{
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_router": "browser",
      "v4": {
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
        "onUnusedMarkdownDirectives": "warn",
      },
      "mdx1Compat": {
        "admonitions": false,
        "comments": false,
        "headingIds": false,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "storage": {
      "namespace": true,
      "type": "localStorage",
    },
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "title",
    "titleDelimiter": "|",
    "url": "https://example.com",
    "vcs": {
      "getFileCreationInfo": [Function],
      "getFileLastUpdateInfo": [Function],
      "initialize": [Function],
    },
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/config/configCJS.js",
}
`;

exports[`loadSiteConfig > website with valid JS ESM config 1`] = `
{
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_router": "browser",
      "v4": {
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
        "onUnusedMarkdownDirectives": "warn",
      },
      "mdx1Compat": {
        "admonitions": false,
        "comments": false,
        "headingIds": false,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "storage": {
      "namespace": true,
      "type": "localStorage",
    },
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "title",
    "titleDelimiter": "|",
    "url": "https://example.com",
    "vcs": {
      "getFileCreationInfo": [Function],
      "getFileLastUpdateInfo": [Function],
      "initialize": [Function],
    },
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/config/configESM.js",
}
`;

exports[`loadSiteConfig > website with valid TypeScript CJS config 1`] = `
{
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_router": "browser",
      "v4": {
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
        "onUnusedMarkdownDirectives": "warn",
      },
      "mdx1Compat": {
        "admonitions": false,
        "comments": false,
        "headingIds": false,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "storage": {
      "namespace": true,
      "type": "localStorage",
    },
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "title",
    "titleDelimiter": "|",
    "url": "https://example.com",
    "vcs": {
      "getFileCreationInfo": [Function],
      "getFileLastUpdateInfo": [Function],
      "initialize": [Function],
    },
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/config/configCJS.ts",
}
`;

exports[`loadSiteConfig > website with valid TypeScript ESM config 1`] = `
{
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_router": "browser",
      "v4": {
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
        "onUnusedMarkdownDirectives": "warn",
      },
      "mdx1Compat": {
        "admonitions": false,
        "comments": false,
        "headingIds": false,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "storage": {
      "namespace": true,
      "type": "localStorage",
    },
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "title",
    "titleDelimiter": "|",
    "url": "https://example.com",
    "vcs": {
      "getFileCreationInfo": [Function],
      "getFileLastUpdateInfo": [Function],
      "initialize": [Function],
    },
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/config/configESM.ts",
}
`;

exports[`loadSiteConfig > website with valid async config 1`] = `
{
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_router": "browser",
      "v4": {
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
        "onUnusedMarkdownDirectives": "warn",
      },
      "mdx1Compat": {
        "admonitions": false,
        "comments": false,
        "headingIds": false,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "organizationName": "endiliey",
    "plugins": [],
    "presets": [],
    "projectName": "hello",
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "storage": {
      "namespace": true,
      "type": "localStorage",
    },
    "stylesheets": [],
    "tagline": "Hello World",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
    "vcs": {
      "getFileCreationInfo": [Function],
      "getFileLastUpdateInfo": [Function],
      "initialize": [Function],
    },
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/config/configAsync.config.js",
}
`;

exports[`loadSiteConfig > website with valid async config creator function 1`] = `
{
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_router": "browser",
      "v4": {
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
        "onUnusedMarkdownDirectives": "warn",
      },
      "mdx1Compat": {
        "admonitions": false,
        "comments": false,
        "headingIds": false,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "organizationName": "endiliey",
    "plugins": [],
    "presets": [],
    "projectName": "hello",
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "storage": {
      "namespace": true,
      "type": "localStorage",
    },
    "stylesheets": [],
    "tagline": "Hello World",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
    "vcs": {
      "getFileCreationInfo": [Function],
      "getFileLastUpdateInfo": [Function],
      "initialize": [Function],
    },
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/config/createConfigAsync.config.js",
}
`;

exports[`loadSiteConfig > website with valid config creator function 1`] = `
{
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_router": "browser",
      "v4": {
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
        "onUnusedMarkdownDirectives": "warn",
      },
      "mdx1Compat": {
        "admonitions": false,
        "comments": false,
        "headingIds": false,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "organizationName": "endiliey",
    "plugins": [],
    "presets": [],
    "projectName": "hello",
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "storage": {
      "namespace": true,
      "type": "localStorage",
    },
    "stylesheets": [],
    "tagline": "Hello World",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
    "vcs": {
      "getFileCreationInfo": [Function],
      "getFileLastUpdateInfo": [Function],
      "initialize": [Function],
    },
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/config/createConfig.config.js",
}
`;

exports[`loadSiteConfig > website with valid siteConfig 1`] = `
{
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [
      "foo.js",
    ],
    "customFields": {},
    "favicon": "img/docusaurus.ico",
    "future": {
      "experimental_router": "browser",
      "v4": {
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
        "onUnusedMarkdownDirectives": "warn",
      },
      "mdx1Compat": {
        "admonitions": false,
        "comments": false,
        "headingIds": false,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "organizationName": "endiliey",
    "plugins": [
      [
        "@docusaurus/plugin-content-docs",
        {
          "path": "../docs",
        },
      ],
      "@docusaurus/plugin-content-pages",
    ],
    "presets": [],
    "projectName": "hello",
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "storage": {
      "namespace": true,
      "type": "localStorage",
    },
    "stylesheets": [],
    "tagline": "Hello World",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
    "vcs": {
      "getFileCreationInfo": [Function],
      "getFileLastUpdateInfo": [Function],
      "initialize": [Function],
    },
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/simple-site/docusaurus.config.js",
}
`;
